--- a/cdn-example.css
+++ b/cdn-example.css
@@ -16,8 +16,8 @@
 
 /* The element to apply the animation to */
 .colors {
-  width: 100%;
   background-color: red;
   animation-name: example;
   animation-duration: 4s;
+  animation-iteration-count: infinite;
 }
